cleaned up javascript code. Added HTML for favouriting a gif.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 
 </div>
 
+<form id="food-form">
+    <label for="food-input">Add your Favourite Foods</label>
+    <input type="text" id="food-input"><br>
+
+    <!-- Button triggers new movie to be added -->
+    <input id="add-food" type="submit" value="Add something yummy...">
+  </form>
+
+<button type="button">Your Favourite Gifs</button>
+<button type="button" id="add-fav">Add a Gif to Favourites</button>
+<div id="favorites-dump">
+
+</div>
 <div id="gif-dump">
 
 </div>
