--- a/index.html
+++ b/index.html
@@ -4,32 +4,56 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <!-- <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'> -->
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lobster|Montserrat&display=swap' type='text/css'>
+    <link rel='stylesheet' href='assets/css/reset.css' type='text/css'>
     <link rel='stylesheet' href='assets/css/styles.css' type='text/css'>
     <title>Gifstronomic</title>
 </head>
 <body>
 
+<div class="title-area">
+    <img src="assets/images/cupcakeFriends.svg" 
+        alt="a large cupcake with two people standing around it." height="150px" width="150px" />
+    <h1 class="title-font">Gifstronomic</h1>
+</div>
+
+
 <div id="button-area">
-
 </div>
 
-<form id="food-form">
-    <label for="food-input">Add your Favourite Foods</label>
-    <input type="text" id="food-input"><br>
+<div class="form-and-search">
+        <h2>Customize</h2>
+        <hr>
+        <form id="food-form">
+                <label for="food-input">Add your Favourite Foods:</label>
+                <input type="text" id="food-input"><br>
+                <input id="add-food" type="submit" value="Add something yummy...">
+            </form>
+        <div class="favs-buttons">
+            <button type="button">Your Favourite Gifs</button>
+            <button type="button" id="add-fav">Add a Gif to Favourites</button>
+        </div>
+    </div>
 
-    <!-- Button triggers new movie to be added -->
-    <input id="add-food" type="submit" value="Add something yummy...">
-  </form>
 
-<button type="button">Your Favourite Gifs</button>
-<button type="button" id="add-fav">Add a Gif to Favourites</button>
-<div id="favorites-dump">
-
+<div id="favorites-dump" class="hidden">
+    <div id="favs-title">
+        <h2>Favourite Gifs</h2>
+        <hr>
+    </div>
+    <div id="fav-gifs-here">
+    </div>
 </div>
+
 <div id="gif-dump">
-
+    <div id="gif-title">
+        <h2>Gifs</h2>
+        <hr>
+    </div>
+    <div id="gifs-here">
+    </div>
 </div>
+
     <script src='https://code.jquery.com/jquery-3.4.1.min.js' integrity='sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=' crossorigin='anonymous'></script>
     <script src="assets/javascript/scripts.js"></script>
 </body>
