continued styling in the gif dump area, styled the fav gifs area, created a function to toggle the fav gifs visibility.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <label for="food-input">Add your Favourite Foods:</label>
                 <input type="text" id="food-input"><br>
                 <input id="add-food" type="submit" value="Add something yummy...">
-            </form>
+        </form>
         <div class="favs-buttons">
-            <button type="button">Your Favourite Gifs</button>
+            <button type="button" id="favorite-gifs-btn">Your Favourite Gifs</button>
             <button type="button" id="add-fav">Add a Gif to Favourites</button>
         </div>
-    </div>
+</div>
 
 
 <div id="favorites-dump" class="hidden">
