added alert section to tell users when they've added a new button. added functionality for storing favs in localstorage, and adding them to a fav gifs area.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <button type="button" id="favorite-gifs-btn">Your Favourite Gifs</button>
             <button type="button" id="add-fav">Add a Gif to Favourites</button>
         </div>
+        <p class="hidden" id="customize-alert"></p>
 </div>
 
 
