Cleaned up code files and added additional comments

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <hr>
     </div>
     <div id="fav-gifs-here">
+        <!-- This is where gifs that the user has favourited are stored -->
     </div>
 </div>
 
@@ -52,6 +53,7 @@
         <hr>
     </div>
     <div id="gifs-here">
+        <!-- This is where gifs are put when the user selects a food to search for by clicking on the button for it. -->
     </div>
 </div>
 
